# qa_guru_lesson_18

./: README.md
poetry/: pyproject.toml
